# vulkan-learning

./: .gitignore  CMakeLists.txt  Makefile  VulkanLearning.sln  VulkanLearning.vcxproj  commands.txt  main.cpp  status.txt
VulkanLearning/x64/Debug/: VulkanLearning.exe.recipe  VulkanLearning.ilk  vc143.idb
VulkanLearning/x64/Debug/VulkanLearning.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VulkanLearning.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
shaders/: shader.vert
src/: main.cpp
